<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:accountType="@string/package_name"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/bhargo_color_one"
    tools:context=".screens.SplashScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:background="@drawable/splash_bg"
        android:orientation="vertical">

    <com.bhargo.user.custom.CustomTextView
        android:id="@+id/tv_appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:gravity="center"
        android:textAllCaps="true"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_40"
        app:customFont="@string/font_name_bold" />

    <com.bhargo.user.custom.CustomTextView
        android:id="@+id/tv_appversion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        app:customFont="@string/font_name" />
    </LinearLayout>
</RelativeLayout>