<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.bhargo.user.custom.CustomTextView
        android:id="@+id/tv_label"
        android:layout_height="@dimen/_50sdp"
        android:text="@string/label"
        style="@style/ControlInputStyle"
        app:customFont="@string/font_satoshi_bold" />

    <com.bhargo.user.custom.CustomTextView
        android:gravity="center"
        android:id="@+id/ll_control_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_2sdp"
        android:textSize="@dimen/_12sdp"
        app:customFont="@string/font_name"/>




</LinearLayout>