<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/alert_bg"
    android:gravity="center"
    android:padding="@dimen/dimen_30"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/dimen_30"
        android:layout_height="@dimen/dimen_30"
        android:layout_gravity="end"
        android:visibility="gone"
        android:id="@+id/imageViewCancel"
        android:src="@drawable/ic_icon_cancel"/>

    <com.bhargo.user.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/alertMessage"
        android:gravity="start"
        android:textColor="?attr/bhargo_color_four"
        app:customFont="@string/font_satoshi_bold"
        android:layout_marginBottom="@dimen/dimen_35"
        android:text="@string/are_you_sure"
        android:textSize="@dimen/text_size_16"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:gravity="end"
    android:orientation="horizontal">
    <com.bhargo.user.custom.CustomButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:id="@+id/buttonNo"
        app:customFont="@string/font_satoshi_Regular"
        android:layout_marginEnd="@dimen/dimen_20"
        android:textAllCaps="false"
        android:textColor="?attr/bhargo_color_four"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="@dimen/text_size_14"
        android:background="@drawable/bg_no"/>
    <com.bhargo.user.custom.CustomButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:id="@+id/buttonYes"
        app:customFont="@string/font_satoshi_Regular"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="@dimen/text_size_14"
        android:background="@drawable/bg_yes"/>

</LinearLayout>
    </LinearLayout>

