<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/alert_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dimen_30">

    <ImageView
        android:id="@+id/imageViewCancel"
        android:layout_width="@dimen/dimen_30"
        android:layout_height="@dimen/dimen_30"
        android:layout_gravity="end"
        android:src="@drawable/ic_icon_cancel"
        android:visibility="gone" />

    <com.bhargo.user.custom.CustomTextView
        android:id="@+id/alertMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_35"
        android:gravity="start"
        android:text="@string/are_you_sure"
        android:textColor="?attr/bhargo_color_four"
        android:textSize="@dimen/text_size_16"
        app:customFont="@string/font_satoshi_bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="end"
        android:orientation="horizontal">

        <com.bhargo.user.custom.CustomButton
            android:id="@+id/buttonYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_yes"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_14"
            app:customFont="@string/font_satoshi_Regular" />

    </LinearLayout>
</LinearLayout>

