<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/dimen_5"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

    <com.bhargo.user.custom.CustomTextView
        android:layout_width="0dp"
        android:id="@+id/tv_displayName"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_6"
        android:maxLines="1"
        android:textColor="@color/colorPrimary"
        android:layout_weight="0.5"
        android:text="@string/displayName"
        app:customFont="@string/font_satoshi"
        android:textSize="@dimen/text_size_14"/>

    <com.bhargo.user.custom.CustomTextView
        android:id="@+id/tv_value"
        android:layout_width="0dp"
        android:padding="@dimen/dimen_6"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:maxLines="1"
        android:text="@string/value"
        android:layout_weight="0.5"
        app:customFont="@string/font_satoshi"
        android:textSize="@dimen/text_size_14"/>
</LinearLayout>
</LinearLayout>