<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_AppsListMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.bhargo.user.custom.CustomEditText
        android:id="@+id/cet_appsSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_margin="@dimen/_5sdp"
        android:background="@drawable/rounded_corners_border"
        android:drawableRight="@drawable/quantum_ic_search_grey600_24"
        android:gravity="start|center_vertical"
        android:hint="@string/search_apps"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_5sdp"
        android:textSize="@dimen/_10sdp"
        android:visibility="gone"
        app:customFont="@string/font_name" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_helpdesk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_10sdp">


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_below="@+id/cv_helpdesk"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical">

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical|start"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/circular_bg"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/icon_user_profile_image" />

            <com.bhargo.user.custom.CustomTextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/iv_profile"
                android:ellipsize="end"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:customFont="@string/font_name_semi_bold" />

            <com.bhargo.user.custom.CustomTextView
                android:id="@+id/tv_mobile_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/iv_profile"
                android:ellipsize="end"
                android:text="@string/mobile_no"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:customFont="@string/font_name" />

            <com.bhargo.user.custom.CustomTextView
                android:id="@+id/tv_designation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_mobile_no"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/iv_profile"
                android:ellipsize="end"
                android:text="@string/designation"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:customFont="@string/font_name" />

            <com.bhargo.user.custom.CustomTextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_designation"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_toEndOf="@+id/iv_profile"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_apps"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cv_profile"
        android:visibility="gone" />

    <com.bhargo.user.custom.CustomTextView
        android:id="@+id/ct_alNoRecords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/no_records"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        android:visibility="gone"
        app:customFont="@string/font_name" />

</RelativeLayout>