<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.9"
            android:orientation="vertical">

            <com.bhargo.user.custom.CustomTextView
                android:id="@+id/ctvLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english_l"
                android:textColor="@color/control_input_text_color"
                android:textSize="@dimen/control_input_text_size"
                app:customFont="@string/font_satoshi_bold" />

            <com.bhargo.user.custom.CustomTextView
                android:id="@+id/ctvLanguageHint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/english"
                style="@style/HintTextStyle"
                app:customFont="@string/font_satoshi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_languageSelected"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/select_blue_color"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:background="@color/default_gray"
        android:layout_height="1dp"/>

</LinearLayout>
